# lecture_security_benefri

ex01/: Cargo.toml  README.md  exceptions
ex01/src/: main.rs
ex01/src/hashing/: check_hashes.rs  hash_files.rs  mod.rs
ex01/src/lib/: check_hashes.rs  file_handling.rs  hash_files.rs  mod.rs
ex01/src/lib/hashes/: check_hashes.rs  hash_files.rs  mod.rs
ex01/src/lib/hashing/: check_hashes.rs  hash_files.rs  mod.rs
ex01/src/lib/modes/: analyze.rs  check.rs  file_handling.rs  hash.rs  index.rs  mod.rs
ex02/: .gitignore  README.md  client.py  demo.cast  requirements.txt  server.py  sinks.py
ex02/custom_crypto/: rsa.py
ex03/: .gitignore  README.md  client.py  ldapclient.py  ldapsclient2.py  main.py  requirements.txt  tests.py  tests_with_abstraction.py
ex03/commands/: base.py  exit.py  help.py
ex03/src/: client.py
ex03/src/commands/: .all.py.swp  __init__.py  add.py  all.py  base.py  exit.py  help.py  log.py  mod.py  remove.py  see.py
