[package]
name = "ex01"
version = "0.1.0"
authors = ["tav-r <david.herrmann@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto-hash = "0.3.4"
json = "0.12.4"
console = "0.12.0"
serde_json = "1.0.57"
serde = { version = "1.0.116", features = ["derive"] }
stopwatch = "0.0.7"
clap = "2.33.3"
